[package]
name = "rbrowser"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Hofstetter <dhofstet@gmail.com>"]
description = "A simple browser (based on the book 'Web Browser Engineering')"
license = "MIT"
repository = "https://github.com/cakebaker/rbrowser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0" # gzip compression/decompression library
encoding = "0.2"
dirs = "4.0.0" # standard locations of directories for config, cache, and other data
rustls = "0.19.1"
webpki = "0.21.0" # library to validate certificates, using v0.21 because v0.22 doesn't seem to be compatible with rustls v0.19.1
webpki-roots = "0.21.0" # Mozilla's root certificates, using v0.21 because v0.22 doesn't seem to be compatible with rustls v0.19.1
tracing = "0.1.28"
tracing-subscriber = "0.2.24"

[dependencies.gtk]
version = "0.3"
package = "gtk4"
