[package]
name = "rbrowser"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Hofstetter <dhofstet@gmail.com>"]
description = "A simple browser (based on the book 'Web Browser Engineering')"
license = "MIT"
repository = "https://github.com/cakebaker/rbrowser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0" # gzip compression/decompression library
encoding = "0.2"
dirs = "4.0.0" # standard locations of directories for config, cache, and other data
rustls = "0.21.6"
rustls-webpki = "0.101.4" # library to validate certificates
webpki-roots = "0.25.2" # Mozilla's root certificates
tracing = "0.1.28"
tracing-subscriber = "0.3.1"

[dependencies.gtk]
version = "0.3"
package = "gtk4"
